--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
   margin: 0;
 }
 
+h1, 
+h3 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
+
 .top,
 .footer {
   background-color: #1F2937;
@@ -91,6 +96,7 @@ body {
   border-radius: 15px;
   text-align: center;
   text-decoration: none;
+  margin-top: 10px;
   width: 100px;
   height: 17px;
   padding: 6px;
@@ -105,8 +111,8 @@ body {
 }
 
 .hero-img {
-  background-color: gray;
   padding: 100px 100px;
+  margin-left: 100px;
 }
 
 .info {
@@ -136,11 +142,13 @@ body {
 
 .info-img {
   border-style: solid;
-  border-width: 5px;
-  border-radius: 10px;
+  border-width: 2px;
+  /*border-radius: 10px;
   border-color: #3882F6;
-  padding: 5px;
-  max-width: 150px;
+  padding: 0px;*/
+  height: auto;
+  height: 90px;
+  width: 125px;
 }
 
 .quote {
@@ -188,6 +196,14 @@ body {
 .cta-text {
   padding: 5px 100px;
   color: #E5E7EB;
+}
+
+.cta-text h4 {
+  margin-bottom: 0px;
+}
+
+.cta-text h5 {
+  margin-top: 5px;
 }
 
 .cta-sign-up {
